--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
+		"@mui/material": "^5.11.0",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -11,6 +14,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"eslint-import-resolver-typescript": "^3.5.2",
+		"module-name": "^0.0.1-security",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
@@ -43,24 +47,24 @@
 		]
 	},
 	"devDependencies": {
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-config-react-app": "^7.0.1",
-		"eslint-plugin-flowtype": "^8.0.3",
-		"eslint-plugin-jsx-a11y": "^6.6.1",
-		"eslint-plugin-prettier": "^4.2.1",
-		"prettier": "^2.7.1",
 		"@typescript-eslint/eslint-plugin": "^5.46.1",
 		"@typescript-eslint/parser": "^5.46.1",
 		"autoprefixer": "^10.4.13",
 		"eslint": "^8.0.1",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-react-app": "^7.0.1",
 		"eslint-config-standard-with-typescript": "^23.0.0",
+		"eslint-plugin-flowtype": "^8.0.3",
 		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-jsx-a11y": "^6.6.1",
 		"eslint-plugin-n": "^15.0.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-react": "^7.31.11",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"postcss": "^8.4.20",
+		"prettier": "^2.7.1",
 		"tailwindcss": "^3.2.4"
 	}
 }
