Login Auth0 && Implement Ui profile

--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@auth0/auth0-react": "^1.12.0",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
 		"@mui/material": "^5.11.0",
+		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -13,10 +15,13 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
+		"@types/react-redux": "^7.1.24",
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"module-name": "^0.0.1-security",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-router-dom": "^6.5.0",
 		"react-scripts": "5.0.1",
 		"swiper": "^8.4.5",
 		"typescript": "*",
