--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "class-validator": "^0.14.0",
     "jwks-rsa": "^3.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
