Design database Messages && Order scheduling food

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-	"cSpell.words": ["linebreak", "nestjs", "Swiper", "typeorm"]
+	"cSpell.words": [
+		"linebreak",
+		"nestjs",
+		"PAGENATION",
+		"Swiper",
+		"timestamptz",
+		"typeorm"
+	]
 }
