--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"@types/react": "^18.0.0",
 		"@types/react-dom": "^18.0.0",
 		"@types/react-redux": "^7.1.24",
+		"axios": "^1.2.1",
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"module-name": "^0.0.1-security",
 		"react": "^18.2.0",
