--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
 	"cSpell.words": [
+		"azqzz",
+		"bgcolor",
+		"describedby",
 		"dtos",
+		"dvsdsd",
 		"flowtype",
 		"linebreak",
+		"Mhgyj",
 		"nestjs",
+		"noreferrer",
 		"PAGENATION",
 		"reduxjs",
+		"sdfecs",
 		"Swiper",
 		"tailwindcss",
 		"timestamptz",
