--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "^7.37.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-uploader": "^3.0.2",
     "simplebar-react": "^2.4.3",
     "web-vitals": "^3.0.3"
   },
