--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
 		"@nestjs/websockets": "^9.2.1",
 		"class-validator": "^0.14.0",
 		"jwks-rsa": "^3.0.0",
+		"mysql": "^2.18.1",
 		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.0",
 		"pg": "^8.8.0",
