--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
 		"@auth0/auth0-react": "^1.12.0",
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
-		"@mui/material": "^5.11.0",
+		"@mui/icons-material": "^5.11.0",
+		"@mui/material": "^5.11.2",
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
