--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
 		"module-name": "^0.0.1-security",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-number-format": "^5.1.2",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.5.0",
 		"react-scripts": "5.0.1",
