Complete basic flow payment checkout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,11 +12,15 @@
 		"noreferrer",
 		"PAGENATION",
 		"reduxjs",
+		"Scriptjs",
 		"sdfecs",
 		"Swiper",
 		"tailwindcss",
+		"Tiếng",
 		"timestamptz",
+		"topup",
 		"typeorm",
+		"Việt",
 		"websockets"
 	]
 }
