--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
 	"cSpell.words": [
 		"azqzz",
 		"bgcolor",
+		"clickaway",
+		"DDTHH",
 		"describedby",
 		"dtos",
 		"dvsdsd",
@@ -11,6 +13,7 @@
 		"nestjs",
 		"noreferrer",
 		"PAGENATION",
+		"Qonto",
 		"reduxjs",
 		"Scriptjs",
 		"sdfecs",
