--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
 		"@emotion/styled": "^11.10.5",
 		"@mui/icons-material": "^5.11.0",
 		"@mui/material": "^5.11.2",
+		"@mui/x-data-grid": "^5.17.18",
+		"@mui/x-date-pickers": "^5.0.13",
 		"@reduxjs/toolkit": "^1.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
@@ -18,9 +20,12 @@
 		"@types/react-dom": "^18.0.0",
 		"@types/react-redux": "^7.1.24",
 		"axios": "^1.2.1",
+		"dayjs": "^1.11.7",
 		"eslint-import-resolver-typescript": "^3.5.2",
 		"module-name": "^0.0.1-security",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
+		"react-currency-format": "^1.1.0",
 		"react-dom": "^18.2.0",
 		"react-number-format": "^5.1.2",
 		"react-redux": "^8.0.5",
