--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
 		"@nestjs/swagger": "^6.1.4",
 		"@nestjs/typeorm": "^9.0.1",
 		"@nestjs/websockets": "^9.2.1",
+		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"jwks-rsa": "^3.0.0",
 		"moment": "^2.29.4",
